test/bad/loops/for08.px

for i, j in 1..2, 3...'a' by 1 do
    skip
